--- a/css/style.css
+++ b/css/style.css
@@ -234,12 +234,19 @@
     padding: 0 1.2em;
 
     position: relative;
+    background: white;
 
     border-bottom: 1px solid rgb(212, 212, 212);
 
     display: flex;
     align-items: center;
     gap: 10px;
+
+    cursor: pointer;
+}
+
+._chat-list ._card:hover{
+    background: rgb(222, 222, 222);
 }
 
 ._date-message{
@@ -262,29 +269,35 @@
 
     display: flex;
     flex-direction: column;
+    gap: 10px;
 
+    overflow-y: auto;
 }
 
 .user-mess{
     position: relative;
-    padding: .5em;
+    padding: .4em;
     padding-left: 3em;
 
     background: rgb(213, 249, 186);
     border-radius: 10px;
 
     align-self: self-end;
+
+    font-size: .9em;
 }
 
 .server-mess{
     position: relative;
-    padding: .5em;
+    padding: .4em;
     padding-right: 3em;
 
     background: rgb(255, 255, 255);
     border-radius: 10px;
 
     align-self: self-start;
+
+    font-size: .9em;
 }
 
 .user-mess>._time-mess{
