--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@
     height: calc(100% - (60px + 50px));
     background-image: url(../img/mine.jpg);
 
-    padding: 1em;
+    padding: 1em 3em;
 
     display: flex;
     flex-direction: column;
