--- a/css/style.css
+++ b/css/style.css
@@ -75,12 +75,13 @@
     background: rgb(234, 234, 234)
 }
 
+
 ._top-bar ._preview-contact,
 ._top-bar ._preview-user{
     display: flex;
     align-items: center;
     gap:5px;
-
+    
     height: 100%;
     
 }
@@ -92,6 +93,8 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+
+    position: relative;
 }
 
 ._icon-wrapper ._top-icon{
@@ -114,6 +117,49 @@
 ._icon-wrapper ._top-icon:active{
     color: rgb(0, 108, 97);
     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0);
+}
+
+._dropdown-topside{
+    position: absolute;
+    top: 36px;
+    right: 9px;
+    background: transparent;
+    border: 0;
+
+    z-index: 20;
+    background: #00000096;
+}
+
+.dropdown-options-top{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: stretch;
+    z-index: 2;
+    top: 0px;
+    left:0;
+    background: white;
+    padding: .7em;
+    border-radius: 3px;
+
+    min-width: 180px;
+    
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.457);
+
+}
+
+.dropdown-options-top a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    padding: 0 .3em;
+    border-radius:2px ;
+}
+
+.dropdown-options-top a:hover{
+    background: rgb(0, 150, 136);
+    color: white;
 }
 /* /Icon */
 
