--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@
     background: rgb(234, 234, 234)
 }
 
+/* AGGIUNGI CONTATTO */
 .add-contact{
     position: absolute;
     top: 50%;left: 50%;
@@ -238,7 +239,7 @@
     font-size: .9em;
 }
 
-._text-container ._user-name{
+._top-bar ._text-container ._user-name{
     padding-left:1em
 }
 
